# jaunch

./: .gitignore  .mailmap  AGENTS.md  BUILD.md  CLAUDE.md  Makefile  README.md  build.gradle.kts  compile.sh  configure-jvm.sh  fiji-launcher-overhaul.txt  fiji.toml  go  gopy.c  gradle.properties  issues.md  jaunch-simple.sh  jaunch.toml  notes.txt  problems.md  problems.txt  repl-windows-hang.txt  settings.gradle.kts  sign-mac.txt
configs/: HelloSwing.java  HelloWorld.java  Info.plist  Props.java  Props5.java  common.toml  entitlements.plist  fiji.py  fiji.toml  fiji.txt  hello.bat  hello.toml  hi.py  hi.toml  hiss.toml  icy.toml  imagej.toml  jvm.toml  jy.bat  jy.toml  launcher.bat  launcher.desktop  launcher.sh  parsy.toml  paunch.toml  props.py  python.toml  qupath.toml  repl.toml
doc/: BUILD.md  EXAMPLES.md  FIJI.md  JVM.md  LIMITS.md  LINUX.md  MACOS.md  PYTHON.md  RELEASE.md  SETUP.md  WINDOWS.md
fiji/: configure-jvm
icons/: NOTICE.txt
jaunch/: CMakeLists.txt  fiji-config  fiji.c  fiji.config  jaunch.c  jaunch.h  runthing.c
props/: README.md  java-linux-x64-adopt-1.8.0_265.txt  java-linux-x64-adopt-11.0.8.10.txt  java-linux-x64-adopt-14.0.2.12.txt  java-linux-x64-corretto-1.8.0_265.txt  java-linux-x64-corretto-11.0.8.txt  java-linux-x64-graalvm-ce-java11-21.1.0.txt  java-linux-x64-graalvm-ce-java11-22.3.0.txt  java-linux-x64-graalvm-ce-java17-22.3.0.txt  java-linux-x64-jbrsdk-1.8.0_232.txt  java-linux-x64-jbrsdk-1.8.0_242.txt  java-linux-x64-jbrsdk-1.8.0_252.txt  java-linux-x64-jbrsdk-11.0.6.txt  java-linux-x64-jbrsdk-11.0.8.txt  java-linux-x64-oracle-1.8.0_261.txt  java-linux-x64-oracle-11.0.8.txt  java-linux-x64-oracle-14.0.2.txt  java-linux-x64-zulu-1.8.0_265.txt  java-linux-x64-zulu-11.0.7.txt  java-linux-x64-zulu-11.0.8.txt  java-linux-x64-zulu-13.0.3.txt  java-linux-x64-zulu-14.0.1.txt  java-linux-x64-zulu-14.0.2.txt  java-linux-x64-zulu-20.0.2.txt  java-linux-x64-zulu-21.0.5.txt  java-linux-x64-zulu-21.0.8.txt  java-linux-x64-zulu-23.0.1.txt  java-linux-x64-zulu-fx-1.8.0_252.txt  java-linux-x64-zulu-fx-1.8.0_422.txt  java-linux-x64-zulu-fx-11.0.17.txt  java-macos-arm64-zulu-1.8.0_462.txt  java-macos-arm64-zulu-11.0.28.txt  java-macos-arm64-zulu-17.0.16.txt  java-macos-arm64-zulu-21.0.8.txt  java-macos-zulu-25.txt  java-windows-arm64-zulu-21.0.7.txt  java-windows-x64-openjdk-25.txt  java-windows-x64-zulu-21.0.7.txt  python-linux-x64-plain-3.13.7.txt  python-macos-arm64-conda-3.13.7.txt  (+5 more)
sign/: entitlements.plist
test/: clean-app.sh  common.include  common.t  crash.t  (+18 more)
(+162 files in other folders)
